--- a/src/tutowidgets.wiki
+++ b/src/tutowidgets.wiki
@@ -141,7 +141,7 @@ let%client mywidget s1 s2 = Eliom_content.Html.D.(
   let button  = div ~a:[a_class ["button"]] [pcdata s1] in
   let content = div ~a:[a_class ["content"]] [pcdata s2] in
   Lwt.async (fun () ->
-    Lwt_js_events.clicks (To_dom.of_element button)
+    Lwt_js_events.clicks (Eliom_content.Html.To_dom.of_element button)
       (fun _ _ -> switch_visibility content; Lwt.return ()));
   div ~a:[a_class ["mywidget"]] [button; content]
 )
